--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
 		<meta charset="utf-8" />
 	</head>
 	<body>
+		
+		<form action="resultado.html" method="get">
 		<label for = "moeda_origem">Moeda de origem: </label>
 		
 		<input type = "text" id="moeda_origem" name = "origem" required 
-			   maxlength ="3">
+			   maxlength ="3" value = "EUR">
 		<label for="moeda_destino">Moeda de destino:</label>
 		
 		<input type="text" id="moeda_destino" name="destino" required
-			   maxlength="3">
+			   maxlength="3" value = "BRL">
 		
-		<input type = "submit"	  value ="converter">  
+		<input type="submit" value ="converter">  
+		</form>
 	</body>
 </html>
