--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				
 			</div>
 			 
-			<!--<input type="submit" value="Converter">-->
+			<!--input type="submit" value="Converter"-->
 			<button type="button" class="btn btn-primary" onclick="ovly.conversor.chamarAPI()">Converter</button>
 			
 		</form>
@@ -60,3 +60,4 @@
 		
 	</body>
 </html>
+
