--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
 			</div>
 			 
 			<!--input type="submit" value="Converter"-->
-			<button type="button" class="btn btn-primary" onclick="ovly.conversor.chamarAPI()">Converter</button>
+			<button type="button" class="btn btn-outline-warning" onclick="ovly.conversor.chamarAPI()">Converter</button>
 			
 		</form>
 		
 		<table class="table">
-		  <thead>
+		  <thead class="thead-dark">
 		    <tr>
 		      <th scope="col">Valor</th>
 		      <th scope="col">Moeda</th>
